--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 chrono = "0.4.19"
-influxdb = "0.1.0"
+influxdb = { version = "0.2.0", features = ["derive"] }
 serde = "1.0.117"
 serde_json = "1.0.59"
+tokio = { version = "0.3.1", features = ["full"] }
