--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,13 @@ services:
       - "8083:8083"
       - "8086:8086"
     volumes:
-      - "./data:/var/lib/influxdb"
+      - ./data/grafana:/var/lib/influxdb
+
+  grafana:
+    image: grafana/grafana:5.0.4
+    ports:
+      - "8085:3000"
+    volumes:
+      - ./data/grafana:/var/lib/grafana
+    depends_on:
+      - influxdb
